HTTP API: added endpoint to download downloaded files
