# http_api/openapi3.yaml
@@ -88,13 +88,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /api/torrent/{id}:
+  /api/torrent/{torrent}:
     get:
       summary: Get details for a torrent by ID
       tags:
         - torrent
       parameters:
-        - name: id
+        - name: torrent
           in: path
           description: ID of the torrent of interest
           required: true
@@ -148,9 +148,11 @@ paths:
         '200':
           description: deleted successfully
           content:
-            application/json:
+            text/plain:
               schema:
-                $ref: '#/components/schemas/Torrent'
+                type: string
+                example: null
+                nullable: true
         '400':
           description: invalid value specified
           content:
@@ -175,6 +177,48 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /api/torrent/{torrent}/file/{file}:
+    get:
+      summary: Get content of a downloaded file
+      tags:
+        - torrent
+      parameters:
+        - name: torrent
+          in: path
+          description: ID of the torrent the file belongs to
+          required: true
+          schema:
+            type: integer
+            format: uint
+        - name: file
+          in: path
+          description: ID of the file of interest
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: successful
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+        '400':
+          description: invalid file and/or torrent ID specified
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: file and/or torrent with given ID not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: internal server error
 components:
   schemas:
     Error:
@@ -189,6 +233,20 @@ components:
         version:
           type: string
           example: 0.0.1
+    File:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+          example: 42
+        path:
+          type: string
+          example: "sample"
+        length:
+          type: integer
+          format: uint
+          example: 1337
     Torrent:
       type: object
       properties:
@@ -201,4 +259,14 @@ components:
           example: "sample.torrent"
         state:
           type: string
-          enum: [not started yet]
+          enum: [not started yet, running, failed, completed, cancelled]
+        status:
+          type: string
+          example: "error description"
+        peer:
+          type: string
+          example: "19-ffaa:1:106d,[127.0.0.1]:43000"
+        files:
+          type: array
+          items:
+            $ref: '#/components/schemas/File'
